Commit test from Atom. poly-tabs element added.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <paper-icon-button id="drawer_toggle" icon="menu" paper-drawer-toggle></paper-icon-button>
       </paper-toolbar>
 
-      <div id="app_container" class="layout vertical center-center test">
+      <div id="app_container" class="layout horizontal center-center">
         <iframe id="app_iframe" src="default_app.html"></iframe>
       </div>
     </paper-header-panel>
