--- a/elements.html
+++ b/elements.html
@@ -9,3 +9,8 @@
 <link rel="import" href="bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="bower_components/paper-tabs/paper-tabs.html">
+<link rel="import" href="bower_components/paper-input/paper-input.html">
+
+<link rel="import" href="bower_components/paper-ripple/paper-ripple.html">
+<link rel="import" href="bower_components/poly-tabs/poly-tabs.html">
+<link rel="import" href="bower_components/paper-tabs/paper-tab.html">
