--- a/styles.html
+++ b/styles.html
@@ -31,11 +31,6 @@
   paper-toolbar{
     background-color: var(--secondary-color);
   }
-  paper-tabs{
-    background-color: var(--secondary-color);
-    --paper-tabs-selection-bar-color: yellow;
-    color: #fff;
-  }
 
   /*Sidebar frame*/
 
@@ -65,6 +60,8 @@
     margin: 0;
   }
   #app_container{
+    position: absolute;
+    width: 100%;
     height: 100%;
   }
   #app_iframe{
