Get the properties and create inputs. TODO: data bind those inputs

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <paper-item onclick="crearBoton()">Botón</paper-item>
         <paper-item onclick="crearPestanas()">Pestañas</paper-item>
       </paper-menu>
+      <div id="properties_list"></div>
     </paper-header-panel>
 
     <paper-header-panel main id="main_frame" mode="seamed">
