Element selection and properties showing correctly for Firefox and Chrome

--- a/index.html
+++ b/index.html
@@ -26,31 +26,29 @@
   <link rel="import" href="styles.html">
 </head>
 
-<body unresolved>
+<body unresolved class="fullbleed">
 
   <paper-drawer-panel right-drawer disable-swipe>
 
-    <paper-header-panel drawer id="sidebar_frame">
+    <paper-scroll-header-panel drawer id="sidebar_frame" class="fit">
 
-      <paper-header-panel class="sidebar_panel">
-        <paper-toolbar id="sidebar_toolbar">
+      <paper-scroll-header-panel class="sidebar_panel" fixed>
+        <paper-toolbar class="sidebar_toolbar">
+          <div class="flex paper-font-title">Elementos</div>
+        </paper-toolbar>
+        <paper-menu>          
+          <paper-item onclick="makeElement('poly-tabs')">Pestañas</paper-item>
+        </paper-menu>
+      </paper-scroll-header-panel>
+
+      <paper-scroll-header-panel class="sidebar_panel" fixed>
+        <paper-toolbar class="sidebar_toolbar">
           <div class="flex paper-font-title">Propiedades</div>
         </paper-toolbar>
         <div id="properties_list"></div>
-      </paper-header-panel>
+      </paper-scroll-header-panel>
 
-      <paper-header-panel class="sidebar_panel">
-        <paper-toolbar id="sidebar_toolbar">
-          <div class="flex paper-font-title">Elementos</div>
-        </paper-toolbar>
-        <paper-menu>
-          <paper-item onclick="crearBoton()">Botón</paper-item>
-          <paper-item onclick="crearPestanas()">Pestañas</paper-item>
-        </paper-menu>
-      </paper-header-panel>
-
-
-    </paper-header-panel>
+    </paper-scroll-header-panel>
 
     <paper-header-panel main id="main_frame" mode="seamed">
       <paper-toolbar id="screen_view_toolbar">
