--- a/styles.html
+++ b/styles.html
@@ -40,21 +40,22 @@
   .sidebar_panel{
     height: 50%;
   }
-  #sidebar_toolbar{
+  .sidebar_toolbar{
     background-color: var(--accent-color);
   }
 
   #properties_list{
     padding: 0 15px;
+    height: 100%
     overflow-y: scroll;
-    height: 100%;
   }
   paper-menu {
     padding: 0;
+    height: 100%;
     background-color: inherit;
     color: #fff;
-    height: 100%;
     overflow-y: scroll;
+    cursor: pointer;
   }
 
   paper-input{
