Created poly-button and added string bindings

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </paper-toolbar>
         <paper-menu>
           <paper-item onclick="makeElement('poly-tabs')">Pestañas</paper-item>
+          <paper-item onclick="makeElement('poly-button')">Botón</paper-item>
         </paper-menu>
       </paper-scroll-header-panel>
 
