--- a/default_app.html
+++ b/default_app.html
@@ -24,6 +24,7 @@
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="elements.html">
   <link rel="import" href="styles.html">
+  <style is="custom-style" include="styles"></style>
 </head>
 
 <body unresolved>
