Create dropdown inputs for poly-layout with working bindings

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
           </paper-tabs>
           <iron-pages selected="{{selected_mode}}">
             <section class="sidebar_section">
-              <paper-menu>
+              <paper-menu id="elements_list">
                 <paper-item onclick="makeElement('poly-tabs')">Pestañas</paper-item>
                 <paper-item onclick="makeElement('poly-button')">Botón</paper-item>
+                <paper-item onclick="makeElement('poly-layout')">Layout</paper-item>
               </paper-menu>
             </section>
             <section></section>
