Add the possibility to create new elements in the selected layout

--- a/styles.html
+++ b/styles.html
@@ -94,6 +94,14 @@
     --iron-icon-height: 20px;
   }
 
+  .outlined_element{
+    box-sizing: border-box;
+    border: 2px solid yellow;
+  }
+  .outlined_layout{
+    box-sizing: border-box;
+    border: 2px solid red;
+  }
 
   .property_name{
     padding: 10px 0;
