Change Chrome for Android theme color and prevent zooming on mobile

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <title>Polytipe</title>
   <meta name="description" content="">
 
-  <!-- Mobile -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- No zooming! -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
   <!-- Chrome / Android -->
+  <meta id="bar" name="theme-color" content="#212121">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="black">
   <link rel="icon" sizes="144x144" href="icon.png">
