--- a/styles.html
+++ b/styles.html
@@ -98,10 +98,6 @@
     box-sizing: border-box;
     border: 2px solid yellow;
   }
-  .outlined_layout{
-    box-sizing: border-box;
-    border: 2px solid red;
-  }
 
   .property_name{
     padding: 10px 0;
@@ -140,6 +136,27 @@
     height: 640px;
     background-color: #E5E5E5;
     border: none;
+  }
+
+  @media (max-width: 1500px) {
+    #app_iframe{
+      width: 288px;
+      height: 512px;
+    }
+	}
+
+  @media (max-width: 850px) {
+    #app_iframe{
+      width: 270px;
+      height: 480px;
+    }
+	}
+
+  @media (max-width: 500px) {
+    #app_iframe{
+      width: 216px;
+      height: 384px;
+    }
   }
 
 </style>
