Add poly-toolbar / actions for deleting elements

--- a/index.html
+++ b/index.html
@@ -29,39 +29,42 @@
 </head>
 
 <body unresolved class="fullbleed">
-
+<template id="app_sidebar" is="dom-bind">
   <paper-drawer-panel right-drawer disable-swipe>
 
-    <paper-scroll-header-panel drawer id="sidebar_frame" class="fit">
+    <paper-header-panel drawer id="sidebar_frame" class="fit">
 
-      <paper-scroll-header-panel class="sidebar_panel" fixed>
-        <template id="app_sidebar" is="dom-bind">
-          <paper-tabs class="sidebar_tabs" selected="{{selected_mode}}">
-            <paper-tab>Elementos</paper-tab>
-            <paper-tab>Layout</paper-tab>
-          </paper-tabs>
-          <iron-pages selected="{{selected_mode}}">
-            <section class="sidebar_section">
-              <paper-menu id="elements_list">
-                <paper-item onclick="makeElement('poly-tabs')">Pestañas</paper-item>
-                <paper-item onclick="makeElement('poly-button')">Botón</paper-item>
-                <paper-item onclick="makeElement('poly-layout')">Layout</paper-item>
-              </paper-menu>
-            </section>
-            <section></section>
-            <section></section>
-          </iron-pages>
-        </template>
-      </paper-scroll-header-panel>
+      <section class="sidebar_panel" fixed>
+        <paper-tabs class="sidebar_tabs" selected="{{selected_mode}}">
+          <paper-tab>Elementos</paper-tab>
+          <paper-tab>Tree</paper-tab>
+        </paper-tabs>
+        <iron-pages selected="{{selected_mode}}">
+          <section class="sidebar_section">
+            <paper-menu id="elements_list">
+              <paper-item onclick="makeElement('poly-tabs')">Pestañas</paper-item>
+              <paper-item onclick="makeElement('poly-button')">Botón</paper-item>
+              <paper-item onclick="makeElement('poly-layout')">Layout</paper-item>
+              <paper-item onclick="makeElement('poly-toolbar')">Toolbar</paper-item>
+            </paper-menu>
+          </section>
+          <section></section>
+        </iron-pages>
+      </section>
 
-      <paper-scroll-header-panel class="sidebar_panel" fixed>
-        <paper-toolbar class="sidebar_toolbar">
-          <div class="flex paper-font-title">Propiedades</div>
-        </paper-toolbar>
-        <div id="properties_list"></div>
-      </paper-scroll-header-panel>
-
-    </paper-scroll-header-panel>
+      <section class="sidebar_panel" fixed>
+        <paper-tabs class="sidebar_tabs" selected="{{selected_mode2}}">
+          <paper-tab>Propiedades</paper-tab>
+          <paper-tab>Estilos</paper-tab>
+        </paper-tabs>
+        <iron-pages selected="{{selected_mode2}}">
+          <section>
+            <div id="properties_list"></div>
+          </section>
+          <section></section>
+        </iron-pages>
+      </section>
+    </paper-header-panel>
 
     <paper-header-panel main id="main_frame" mode="seamed">
       <paper-toolbar id="screen_view_toolbar">
@@ -76,6 +79,10 @@
       </div>
     </paper-header-panel>
   </paper-drawer-panel>
+    </template>
+  <paper-toast id="ready_toast" duration="2000">
+    <iron-icon id="ready_toast_icon" icon="check"></iron-icon>Cargado
+  </paper-toast>
 
   <script src="app.js"></script>
 </body>
