--- a/default_app.html
+++ b/default_app.html
@@ -7,8 +7,8 @@
   <title>My App</title>
   <meta name="description" content="">
 
-  <!-- Mobile -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- No zooming! -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
   <!-- Chrome / Android -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -20,7 +20,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png">
 
-  <!-- Web Components -->
+  <!-- Web Components and magic stuff -->
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="elements.html">
   <link rel="import" href="styles.html">
@@ -28,17 +28,13 @@
 </head>
 
 <body unresolved>
-  <paper-drawer-panel disable-swipe>
+  <paper-drawer-panel id="drawer" disable-swipe force-narrow>
     <paper-header-panel drawer>
-      <paper-toolbar>Menu</paper-toolbar>
-
+      <div id="drawer_content"></div>
     </paper-header-panel>
     <paper-header-panel main mode="seamed">
-      <paper-toolbar>
-        <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
-        <div class="flex">My App</div>
-      </paper-toolbar>
-      <div id="app_content"></div>
+      <!-- <div id="app_content"></div> -->
+      <div id="app_content" handle="my-handle"></div>
     </paper-header-panel>
   </paper-drawer-panel>
 
