--- a/styles.html
+++ b/styles.html
@@ -59,6 +59,7 @@
   }
   .sidebar_panel{
     height: 50%;
+    overflow-y: scroll;
   }
   .sidebar_section{
     height: 100%;
@@ -73,14 +74,12 @@
     height: 100%;
     background-color: inherit;
     color: #fff;
-    /*overflow-y: scroll;*/
     cursor: pointer;
   }
 
   #properties_list{
     padding: 0 15px;
     height: 100%;
-    overflow-y: scroll;
   }
 
   .array_fab{
@@ -112,6 +111,27 @@
     margin-left: 15px;
   }
 
+  /*Element actions*/
+
+  #element_actions{
+    margin: 15px 0;
+  }
+
+  .move_button{
+    background-color: var(--polytipe-bg-color);
+    color: white;
+    width: 35px;
+    height: 35px;
+    margin-right: 2px;
+  }
+  #delete_button{
+    background-color: var(--app-accent-color);
+    color: white;
+    width: 35px;
+    height: 35px;
+    margin-left: 10px;
+  }
+
   /*Main frame*/
 
   #main_frame{
@@ -130,6 +150,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    min-height: 700px;
   }
   #app_iframe{
     width: 360px;
@@ -138,7 +159,25 @@
     border: none;
   }
 
+  #ready_toast{
+    background-color: var(--polytipe-toolbar-color);
+    color: white;
+  }
+  #ready_toast_icon{
+    margin-right: 10px;
+    color: var(--polytipe-accent-color);
+  }
+
+  /*Iframe frame*/
+
+  #app_content{
+    line-height: 0;
+  }
+
   @media (max-width: 1500px) {
+    #app_container{
+      min-height: 550px;
+    }
     #app_iframe{
       width: 288px;
       height: 512px;
