Add file-tree and some testing

--- a/default_app.html
+++ b/default_app.html
@@ -33,8 +33,7 @@
       <div id="drawer_content"></div>
     </paper-header-panel>
     <paper-header-panel main mode="seamed">
-      <!-- <div id="app_content"></div> -->
-      <div id="app_content" handle="my-handle"></div>
+      <div id="app_content"></div>
     </paper-header-panel>
   </paper-drawer-panel>
 
