Display tree correctly / Fix drawer scroll problems

--- a/elements.html
+++ b/elements.html
@@ -18,6 +18,8 @@
 <link rel="import" href="bower_components/paper-ripple/paper-ripple.html">
 <link rel="import" href="bower_components/paper-toast/paper-toast.html">
 
+<link rel="import" href="bower_components/file-tree/file-tree.html">
+
 <link rel="import" href="bower_components/poly-elements/poly-tabs.html">
 <link rel="import" href="bower_components/poly-elements/poly-button.html">
 <link rel="import" href="bower_components/poly-elements/poly-toolbar.html">
