--- a/styles.html
+++ b/styles.html
@@ -59,7 +59,6 @@
   }
   .sidebar_panel{
     height: 50%;
-    overflow-y: scroll;
   }
   .sidebar_section{
     height: 100%;
@@ -109,6 +108,15 @@
 
   .sub_property{
     margin-left: 15px;
+  }
+
+  #tree_view{
+    padding: 15px;
+  }
+
+  file-tree{
+    color: #eee;
+    text-transform: lowercase;
   }
 
   /*Element actions*/
