Selecting tree items now reflects to elements

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body unresolved class="fullbleed">
   <template id="app" is="dom-bind">
-    <paper-drawer-panel right-drawer disable-swipe>
+    <paper-drawer-panel right-drawer>
 
       <paper-scroll-header-panel drawer id="sidebar_frame">
         <paper-scroll-header-panel class="sidebar_panel" fixed>
