Reflect element selection on tree

--- a/styles.html
+++ b/styles.html
@@ -15,6 +15,7 @@
 
   html{
     font-family: "Roboto", 'Helvetica Neue';
+    line-height: 0px;
   }
 
   /*Default typography styles*/
@@ -180,6 +181,8 @@
   #app_content{
     line-height: 0;
   }
+
+  /* TODO: Resize iframe using scale, not using width and height */
 
   @media (max-width: 1500px) {
     #app_container{
