--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <paper-scroll-header-panel class="sidebar_panel" fixed>
           <paper-tabs class="sidebar_tabs" selected="{{selected_mode}}">
             <paper-tab>Elementos</paper-tab>
-            <paper-tab onclick="trigger_tree_mode()">Tree</paper-tab>
+            <paper-tab>Tree</paper-tab>
           </paper-tabs>
           <iron-pages selected="{{selected_mode}}">
             <section class="sidebar_section">
