--- a/index.html
+++ b/index.html
@@ -30,21 +30,36 @@
 
 <body unresolved class="fullbleed">
   <template id="app" is="dom-bind">
-    <paper-drawer-panel right-drawer>
+    <paper-drawer-panel right-drawer disable-swipe>
 
       <paper-scroll-header-panel drawer id="sidebar_frame">
+        <paper-toolbar id="sidebar_polytipe_toolbar" class="medium-tall">
+          <iron-icon id="sidebar_polytipe_logo" icon="polytipe-icons:icon"></iron-icon>
+        </paper-toolbar>
         <paper-scroll-header-panel class="sidebar_panel" fixed>
-          <paper-tabs class="sidebar_tabs" selected="{{selected_mode}}">
+          <paper-tabs class="sidebar_tabs paper-header" selected="{{selected_mode}}">
             <paper-tab>Elementos</paper-tab>
             <paper-tab>Tree</paper-tab>
           </paper-tabs>
           <iron-pages selected="{{selected_mode}}">
             <section class="sidebar_section">
               <paper-menu id="elements_list">
-                <paper-item onclick="makeElement('poly-tabs')">Pestañas</paper-item>
-                <paper-item onclick="makeElement('poly-button')">Botón</paper-item>
-                <paper-item onclick="makeElement('poly-layout')">Layout</paper-item>
-                <paper-item onclick="makeElement('poly-toolbar')">Toolbar</paper-item>
+                <paper-item onclick="makeElement('poly-tabs')">
+                  <iron-icon icon="tab" class="element_icon"></iron-icon>
+                  <div>Pestañas</div>
+                </paper-item>
+                <paper-item onclick="makeElement('poly-button')">
+                  <iron-icon icon="image:crop-landscape" class="element_icon"></iron-icon>
+                  <div>Botón</div>
+                </paper-item>
+                <paper-item onclick="makeElement('poly-layout')">
+                  <iron-icon icon="dashboard" class="element_icon"></iron-icon>
+                  <div>Layout</div>
+                </paper-item>
+                <paper-item onclick="makeElement('poly-toolbar')">
+                  <iron-icon icon="av:web-asset" class="element_icon"></iron-icon>
+                  <div>Toolbar</div>
+                </paper-item>
               </paper-menu>
             </section>
             <section id="tree_view" class="sidebar_section">
@@ -54,15 +69,35 @@
         </paper-scroll-header-panel>
 
         <paper-scroll-header-panel class="sidebar_panel" fixed>
-          <paper-tabs class="sidebar_tabs" selected="{{selected_mode2}}">
+          <paper-tabs class="sidebar_tabs paper-header" selected="{{selected_mode2}}">
             <paper-tab>Propiedades</paper-tab>
             <paper-tab>Estilos</paper-tab>
           </paper-tabs>
+          <div id="properties_placeholder" class="layout vertical center-center">
+            <iron-icon id="no_elements_selected" icon="touch-app"></iron-icon>
+            <div>Selecciona un elemento</div>
+          </div>
           <iron-pages selected="{{selected_mode2}}">
             <section>
-              <div id="properties_list"></div>
+              <div id="properties_list" class="sidebar_list"></div>
             </section>
-            <section></section>
+            <section>
+              <div id="styles_list" class="sidebar_list">
+                <paper-input label="width"></paper-input>
+                <paper-input label="height"></paper-input>
+                <paper-input label="padding"></paper-input>
+                <paper-input label="margin"></paper-input>
+                <div class="layout horizontal center">
+                  <paper-swatch-picker></paper-swatch-picker>
+                  <paper-input label="background-color"></paper-input>
+                </div>
+                <div class="layout horizontal center">
+                  <paper-swatch-picker></paper-swatch-picker>
+                  <paper-input label="color"></paper-input>
+                </div>
+                <paper-input label="display"></paper-input>
+              </div>
+            </section>
           </iron-pages>
         </paper-scroll-header-panel>
       </paper-scroll-header-panel>
@@ -70,7 +105,7 @@
       <paper-header-panel main id="main_frame" mode="seamed">
         <paper-toolbar id="screen_view_toolbar">
           <paper-icon-button class="back_icon" icon="arrow-back"></paper-icon-button>
-          <div class="flex paper-font-title">Polytipe</div>
+          <div class="flex paper-font-title">Pantalla 1</div>
           <span class="flex"></span>
           <paper-icon-button id="drawer_toggle" icon="menu" paper-drawer-toggle></paper-icon-button>
         </paper-toolbar>
@@ -83,7 +118,10 @@
   </template>
 
   <paper-toast id="ready_toast" duration="2000">
-    <iron-icon id="ready_toast_icon" icon="check"></iron-icon>Cargado
+    <div class="layout horizontal center">
+      <iron-icon id="ready_toast_icon" icon="check"></iron-icon>
+      <div>Cargado</div>
+    </div>
   </paper-toast>
 
   <script src="app.js"></script>
