--- a/styles.html
+++ b/styles.html
@@ -60,10 +60,8 @@
   }
 
   #sidebar_polytipe_logo{
-    margin-top: 50px;
-    margin-left: 10px;
-    width: 80px;
-    height: 80px;
+    width: 100%;
+    height: 100%;
     color: rgba(0, 0, 0, 0.15);
   }
 
@@ -105,7 +103,6 @@
     width: 100%;
     text-align: center;
     color: rgba(255, 255, 255, 0.4);
-    display: none;
   }
 
   #properties_placeholder div{
@@ -114,11 +111,16 @@
     font-size: 16px;
   }
 
+  #styles_list{
+    display: none;
+  }
+
   paper-swatch-picker {
     --paper-swatch-picker-color-size: 12px;
     --paper-swatch-picker-icon-size: 35px;
     margin-right: 15px;
     margin-top: 12px;
+    color: rgba(255, 255, 255, 0.5);
   }
 
   #no_elements_selected{
@@ -240,16 +242,6 @@
   @media (max-width: 850px) {
     #app_iframe{
       transform: scale(0.75);
-    }
-    #sidebar_polytipe_logo{
-      margin: 0;
-      width: 40px;
-      height: 40px;
-    }
-    #sidebar_polytipe_toolbar{
-      display: none;
-      height: 0;
-      padding: 0;
     }
 	}
 
