Add manifest and different icon sizes

--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
   <meta id="bar" name="theme-color" content="#212121">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="black">
-  <link rel="icon" sizes="144x144" href="icon.png">
+  <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
 
-  <!-- Safari / iOS -->
+  <!-- Web Application Manifest -->
+  <link rel="manifest" href="manifest.json">
+
+  <!-- Tile color for Win8/10 -->
+  <meta name="msapplication-TileColor" content="#3372DF">
+  <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+
+  <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png">
+  <meta name="apple-mobile-web-app-title" content="Polytipe">
+  <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
 
   <!-- Web Components -->
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
