Change color of icons

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   <!-- No zooming! -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/touch/chrome-touch-icon-192x192_dark.png" />
+
   <!-- Chrome / Android -->
   <meta id="bar" name="theme-color" content="#212121">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="black">
-  <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
+  <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192_dark.png">
 
   <!-- Web Application Manifest -->
   <link rel="manifest" href="manifest.json">
