--- a/styles.html
+++ b/styles.html
@@ -9,12 +9,14 @@
     --polytipe-secondary-color: #FFEB3B;
     --sidebar-bg-color: #1A1A1A;
 
+    --app-bg-color: #E5E5E5;
     --app-primary-color: #03A9F4;
     --app-accent-color: #FF5252;
   }
 
   html{
     font-family: "Roboto", 'Helvetica Neue';
+    background-color: var(--polytipe-bg-color);
   }
 
   /*Default typography styles*/
@@ -93,7 +95,7 @@
   }
 
   .sidebar_list{
-    padding: 15px;
+    padding: 20px;
     height: 100%;
   }
 
@@ -209,7 +211,7 @@
   #app_iframe{
     width: 360px;
     height: 640px;
-    background-color: #E5E5E5;
+    background-color: var(--app-bg-color);
     border: none;
   }
 
