--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <body unresolved class="fullbleed">
   <template id="app" is="dom-bind">
-    <paper-drawer-panel right-drawer disable-swipe>
+    <paper-drawer-panel right-drawer disable-swipe drawer-width="290px">
 
       <paper-scroll-header-panel drawer id="sidebar_frame">
         <paper-toolbar id="sidebar_polytipe_toolbar">
