Adding elements to the drawer is now possible

--- a/default_app.html
+++ b/default_app.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 
 <head>
@@ -32,8 +32,8 @@
 </head>
 
 <body unresolved class="fullbleed">
-  <paper-drawer-panel id="drawer" disable-swipe force-narrow>
-    <paper-header-panel drawer>
+  <paper-drawer-panel id="drawer_panel" disable-swipe force-narrow>
+    <paper-header-panel drawer mode="seamed">
       <div id="drawer_content"></div>
     </paper-header-panel>
     <paper-header-panel main mode="seamed">
