--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                 <paper-input label="padding"></paper-input>
                 <paper-input label="margin"></paper-input>
                 <div class="layout horizontal center">
-                  <paper-swatch-picker horizontal-align="right"></paper-swatch-picker>
+                  <paper-swatch-picker horizontal-align="right" vertical-align="bottom"></paper-swatch-picker>
                   <paper-input label="background-color"></paper-input>
                 </div>
                 <div class="layout horizontal center">
-                  <paper-swatch-picker></paper-swatch-picker>
+                  <paper-swatch-picker horizontal-align="right" vertical-align="bottom"></paper-swatch-picker>
                   <paper-input label="color"></paper-input>
                 </div>
                 <paper-input label="display"></paper-input>
