Get styles from selected element correctly

--- a/styles.html
+++ b/styles.html
@@ -11,7 +11,7 @@
 
     --app-bg-color: #E5E5E5;
     --app-primary-color: #03A9F4;
-    --app-accent-color: #FF5252;
+    --app-accent-color: #F44336;
   }
 
   html{
