Fix poly-layout border issues

--- a/styles.html
+++ b/styles.html
@@ -14,6 +14,10 @@
     --app-accent-color: #F44336;
   }
 
+  * {
+		-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+	}
+
   html{
     font-family: "Roboto", 'Helvetica Neue';
     background-color: var(--polytipe-bg-color);
@@ -52,6 +56,11 @@
 
   paper-fab{
     --paper-fab-keyboard-focus-background: var(--polytipe-accent-color);
+  }
+
+  poly-layout{    
+    box-sizing: border-box;
+    border: 1px solid #aaa;
   }
 
   /*Sidebar frame*/
