--- a/styles.html
+++ b/styles.html
@@ -58,7 +58,7 @@
     --paper-fab-keyboard-focus-background: var(--polytipe-accent-color);
   }
 
-  poly-layout{    
+  poly-layout{
     box-sizing: border-box;
     border: 1px solid #aaa;
   }
@@ -99,8 +99,8 @@
     cursor: pointer;
   }
 
-  .element_icon{
-    margin-right: 20px;
+  .test{
+    position: relative;
   }
 
   .sidebar_list{
