--- a/elements.html
+++ b/elements.html
@@ -1,7 +1,4 @@
 <!-- iron-elements -->
-<link rel="import" href="bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="bower_components/iron-icons/image-icons.html">
-<link rel="import" href="bower_components/iron-icons/av-icons.html">
 <link rel="import" href="bower_components/iron-iconset-svg/iron-iconset-svg.html">
 <link rel="import" href="bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="bower_components/iron-pages/iron-pages.html">
@@ -22,6 +19,7 @@
 <link rel="import" href="bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="bower_components/paper-ripple/paper-ripple.html">
 <link rel="import" href="bower_components/paper-toast/paper-toast.html">
+<link rel="import" href="bower_components/paper-tooltip/paper-tooltip.html">
 
 <!-- Elements from customelements.io-->
 <link rel="import" href="bower_components/file-tree/file-tree.html">
@@ -31,9 +29,17 @@
 <link rel="import" href="bower_components/poly-elements/poly-tabs.html">
 <link rel="import" href="bower_components/poly-elements/poly-button.html">
 <link rel="import" href="bower_components/poly-elements/poly-toolbar.html">
+<link rel="import" href="bower_components/poly-elements/poly-card.html">
+<link rel="import" href="bower_components/poly-elements/poly-checkbox.html">
+<link rel="import" href="bower_components/poly-elements/poly-fab.html">
+<link rel="import" href="bower_components/poly-elements/poly-icon-button.html">
 
 <link rel="import" href="bower_components/poly-layout/poly-layout.html">
 <link rel="import" href="bower_components/poly-layout/layout-dropdown.html">
+
+<!-- Polytipe custom-elements -->
+<link rel="import" href="bower_components/polytipe-elements/polytipe-item.html">
+
 
 <iron-iconset-svg name="polytipe-icons" size="40">
   <svg>
